<resources>
    <string name="facebook_app_id">651513371662257</string>
    <string name="fb_login_protocol_scheme">fb651513371662257</string>
    <string name="app_name">TVFood</string>

    <string name="title_bancanphaidangnhap">Bạn cần phải đăng nhập</string>
    <string name="khongcothongtinlienhe">Không có thông tin liên hệ</string>


    <string name="saving_image">Saving image</string>
    <string name="preparing_card">Preparing card</string>
    <string name="no_storage_card">No storage card</string>
    <string name="not_enough_space">Not enough space</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="thongbao6">Vui lòng nhập đầy đủ thông tin!</string>
    <string name="thongbao3">Đang tìm tuyến đường, vui lòng chờ&#8230;</string>
    <string name="thongbao5">Bạn phải chọn một tỉnh thành trước</string>
    <string name="thongbao4">Bạn chỉ có thể chọn tối đa 6 hình ảnh</string>
    <string name="thongbao1">Đang xử lý, vui lòng chờ&#8230;</string>
    <string name="thongbao2">Đã có lỗi xảy ra</string>
    <string name="thongbao7">Bạn phải có ít nhất 3 hình ảnh</string>
    <string name="thongbao8">Bạn vui lòng xác định vị trí trước khi xác nhận</string>
    <string name="thongbao9">Bạn chưa chọn giờ mở cửa hoặc giờ đóng cửa</string>
    <string name="thongbao10">Số điện thoại không hợp lệ</string>
    <string name="thongbao11">Giờ đóng cửa không hợp lệ</string>

    <string name="txt_dangnhap">Đăng Nhập</string>
    <string name="txt_dangxuat">Đăng Xuất</string>
    <string name="thang"> Tháng </string>
    <string name="thangs"> Tháng </string>
    <string name="ngaytruoc"> ngày trước</string>
    <string name="ngaytruocs"> ngày trước</string>
    <string name="giotruoc"> giờ trước</string>
    <string name="thangtruoc"> tháng trước</string>
    <string name="giotruocs"> giờ trước</string>
    <string name="thangtruocs"> tháng trước</string>
    <string name="phuttruoc"> phút trước</string>
    <string name="phuttruocs"> phút trước</string>
    <string name="giaytruoc"> giây trước</string>
    <string name="giaytruocs"> giây trước</string>
    <string name="vuamoi"> vừa mới</string>
    <string name="chontinhthanh">Chọn tỉnh thành</string>
    <string name="chonquanhuyen">Chọn quận huyện</string>
    <string name="chondanhmuc">Chọn danh mục</string>
    <string name="vuilongcapduquyen">Vui lòng cấp đủ quyền để sử dụng hết chức năng của ứng dụng</string>
    <string name="huyluuquananthanhcong">Hủy lưu quán ăn thành công</string>
    <string name="luuquananthanhcong">Lưu quán ăn thành công</string>
    <string name="banmuondanhgia">Bạn muốn đánh giá</string>
    <string name="danhgiathanhcong">Đánh giá thành công</string>
    <string name="diemcho">điểm cho</string>
    <string name="duongdi">đường</string>
    <string name="hinhanh">Hình ảnh</string>
    <string name="danhmuc">Danh Mục</string>
    <string name="trangchu">Trang Chủ</string>
    <string name="diadiem">Địa Điểm</string>
    <string name="diachi">Địa chỉ</string>
    <string name="diemden">Điểm đến</string>
    <string name="caidatgps">Cài đặt GPS</string>
    <string name="gpskhonghoatdong">GPS không hoạt động. Bạn có muốn đi đến cài đặt?</string>
    <string name="vitricuaban">Vị trí của bạn</string>
    <string name="caidat">Cài đặt</string>
    <string name="thoat">Thoát</string>
    <string name="dangmocua">ĐANG MỞ CỬA</string>
    <string name="dongcua">ĐÓNG CỬA</string>
    <string name="cacthongtinkhac">Các thông tin khác</string>
    <string name="tuvitrihientai">(Từ vị trí hiện tại)</string>
    <string name="phobien">Phổ biến</string>
    <string name="xacnhan">Xác nhận</string>
    <string name="vietnam">Việt Nam</string>
    <string name="danhgia">Đánh giá</string>
    <string name="huy">Hủy</string>
    <string name="xong">Xong</string>
    <string name="thich">Thích</string>
    <string name="luu">Lưu</string>
    <string name="sodienthoai">Số điện thoại</string>
    <string name="tennguoidung">Tên người dùng</string>
    <string name="thulai">Thử Lại</string>
    <string name="ketnoiinternetthatbai">Kết nối internet thất bại</string>
    <string name="matketnoiinternet">Mất kết nối Internet</string>
    <string name="khongcoketnoiinternet">Không có kết nối Internet</string>
    <string name="khongcoketqua">Không có kết quả</string>
    <string name="doitinhthanh">Đổi tỉnh thành</string>
    <string name="quancom">Quán cơm</string>
    <string name="tiembanh">Tiệm bánh</string>
    <string name="quannhau">Quán nhậu</string>
    <string name="nhahang">Nhà hàng</string>
    <string name="nuocuong">Nước uống</string>
    <string name="anvat">Ăn vặt</string>
    <string name="anchay">Ăn chay</string>
    <string name="khampha">Khám phá</string>
    <string name="co">CÓ</string>
    <string name="banchuadangnhapbancomuondangnhap">Bạn chưa đăng nhập \n Bạn có muốn đăng nhập?</string>
    <string name="bancomuonthoatkhong">Bạn muốn thoát ứng dụng?</string>
    <string name="khong">KHÔNG</string>
    <string name="chapnhan">Chấp nhận</string>
    <string name="tuchoi">Từ chối</string>
    <string name="vitricuabanla">Vị trí hiện tại của bạn là</string>
    <string name="khongcodulieu">Không có dữ liệu</string>
    <string name="timquanan">Tìm Quán Ăn</string>
    <string name="chiaseungdung">Chia sẻ ứng dụng</string>
    <string name="trogiupvaphanhoi">Trợ giúp và phản hồi</string>
    <string name="dangnhapvoifb">Đăng nhập với facebook</string>
    <string name="timnhanh">Tìm nhanh</string>
    <string name="doiquocgia">Đổi quốc gia"</string>
    <string name="tudongxacdinhvitri">Tự động xác định vị trí</string>
    <string name="chontinhthanhpho">Chọn Tỉnh/Thành Phố</string>
    <string name="dayeuthich">Đã yêu thích</string>
    <string name="xemtatcabinhluan">Xem tất cả bình luận</string>
    <string name="binhluan">Bình luận</string>
    <string name="banva">Bạn và</string>
    <string name="nguoikhac">người khác</string>
    <string name="gpskhonghoatdongbancomuondidencaidat">GPS không hoạt động. Bạn có muốn đi đến cài đặt?</string>
    <string name="tinhnangdangxaydung">Tính năng đang xây dựng!</string>
    <string name="diadiemnaykhonghotrodathang">Địa điểm này không hỗ trợ đặt hàng!</string>
    <string name="dadanhgia">Đã đánh giá</string>
    <string name="chuacobinhluan">Chưa có bình luận</string>
    <string name="chuacodulieu">Chưa có dữ liệu</string>
    <string name="dabinhluan">Đã bình luận</string>
    <string name="banchuachontinhthanhpho">Bạn chưa chọn tỉnh hoặc thành phố</string>
    <string name="doingonngu">Đổi ngôn ngữ</string>
    <string name="nhanthongbao">Nhận thông báo</string>
    <string name="txt_danhmuc">Danh Mục</string>
    <string name="txt_trangchu">Trang Chủ</string>
    <string name="txt_diadiem">Địa Điểm</string>
    <string name="thongtindinhkem">Thông tin đính kèm</string>
    <string name="thongtinkhac">Thông tin khác</string>
    <string name="thongtincoban">Thông tin cơ bản</string>
    <string name="xacnhanvitri">Xác nhận vị trí</string>
    <string name="vuilongchondungnhunggidanhapotren">*Vui lòng chọn đúng theo những gì đã nhập ở trên</string>
    <string name="chupanh">Chụp ảnh</string>
    <string name="nhanvaodemobando">*Nhấn vào để mở bản đồ</string>
    <string name="vuilongchonvitridungnhat">*Vui lòng chọn vị trí đúng nhất với những gì bạn đã nhập ở trên</string>
    <string name="thuvien">Thư viện</string>
    <string name="textdangnhap">Hãy kết nối tài khoản Facebook của bạn để tiếp tục!</string>
    <string name="gioithieu">Giới thiệu</string>
    <string name="banchuadangnhap">Bạn chưa đăng nhập tài khoản</string>
    <string name="xembando">xem bản đồ</string>
    <string name="lienhe">Liên hệ</string>
    <string name="gantoi">Gần tôi</string>
    <string name="nhapdiachi">Nhập địa chỉ</string>
    <string name="nhapsodienthoai">Nhập số điện thoại</string>
    <string name="xacdinhvitri">Xác định vị trí</string>
    <string name="nhaptenquan">Nhập tên quán</string>
    <string name="tenquan">Tên quán</string>
    <!--activity_main-->
    <string name="activity_main_trangchu">Trang Chủ</string>
    <string name="activity_main_danganh">Đề Xuất</string>
    <string name="activity_main_bosuutap">Bộ Sưu Tập</string>
    <string name="activity_main_caidat">Cài Đặt</string>
    <string name="activity_main_chiase">Thông Báo</string>
    <string name="activity_main_hoten">Họ tên</string>
    <string name="activity_main_sodienthoai">Số điện thoại</string>
    <string name="activity_main_txt_taikhoan">Tài khoản</string>
    <string name="activity_main_chuacosodienthoai">Chưa có số điện thoại</string>
    <!--end-activity_main-->

    <!--fragment_tab_trang_chu-->
    <string name="txt_gantoi">Gần tôi</string>
    <!--end - fragment_tab_trang_chu-->

    <!--view_chuacobinhluan-->
    <string name="txt_chuacobinhluan">Chưa có bình luận...</string>
    <!--end - view_chuacobinhluan-->

    <!--item_list_trangchu-->
    <string name="txt_datgiaohang">Đặt giao hàng</string>
    <string name="txt_khonghotrodatgiaohang">Không hỗ trợ đặt giao hàng</string>
    <string name="txt_dangmocua">Đang mở cửa</string>
    <string name="txt_chuamocua">Chưa mở cửa</string>
    <string name="txt_km">km</string>
    <!--end - item_list_trangchu-->

    <!--activity_maps-->
    <string name="activity_maps_title">Xem bản đồ</string>
    <!--end-activity_maps-->
    <string name="google_maps_key">AIzaSyBe-3NIUM_Z8u9LMQb1QzQwObbzAlj4IVk</string>
    <string name="google_maps_key_server">AIzaSyC7r-IqRdYMRTmkOnnl1e1v1IaBmywN40s</string>
    <string name="title_activity_maps">Maps</string>
    <string name="edittext_hint_nhapbinhluan">Nhập bình luận</string>
    <string name="title_activity_maps__tim_quan_an">Maps</string>
    <string name="title_activity_maps__xac_dinh_vi_tri">Maps</string>
    <string name="latitude">Kinh độ</string>
    <string name="longitude">Vĩ độ</string>
</resources>
