<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="160dp">

        <TextView
            android:id="@+id/txt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:text="@string/banchuadangnhapbancomuondangnhap"
            android:textColor="@color/black_85"
            android:textSize="21sp" />


        <LinearLayout
            android:layout_width="232dp"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/txt"
            android:layout_gravity="center"
            android:layout_marginLeft="50dp"
            android:layout_marginRight="27dp"
            android:layout_marginTop="25dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btn_khongdangnhap"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:layout_weight="1"
                android:background="@null"
                android:text="@string/khong"
                android:textColor="@color/colorBottomBar" />

            <Button
                android:id="@+id/btn_codangnhap"
                android:layout_width="wrap_content"
                android:layout_height="37dp"
                android:layout_weight="1"
                android:background="@color/colorBottomBar"
                android:text="@string/co"
                android:textColor="@color/colorWhite" />

        </LinearLayout>

    </RelativeLayout>
</LinearLayout>