<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="@color/colorTransparent"
        android:orientation="vertical"
        android:paddingBottom="10dp"
        android:paddingTop="20dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/vitricuabanla"
            android:textColor="@color/colorBlack"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/txt_Text"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:textColor="@color/colorBottomBar"
            android:textSize="22sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:orientation="horizontal">

            <Button
                android:id="@+id/btnThoat"
                android:layout_width="115dp"
                android:layout_height="40dp"
                android:background="@color/colorTransparent"
                android:text="@string/tuchoi"
                android:textColor="@color/colorActionBar" />

            <Button
                android:id="@+id/btnXacNhan"
                android:layout_width="115dp"
                android:layout_height="40dp"
                android:layout_marginLeft="16dp"
                android:background="@color/colorBottomBar"
                android:text="@string/chapnhan"
                android:textColor="@color/colorWhite" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>