<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.tvfood.Local_Address.Activity_ChonTinhThanh">

    <RelativeLayout
        android:id="@+id/rela_toolbar"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:background="@color/colorBottomBar">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#05FFFFFF">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignParentLeft="true"
                    android:layout_marginRight="80dp"
                    android:orientation="horizontal">

                    <ImageView
                        android:id="@+id/imgBack"
                        android:layout_width="@dimen/height_sliding"
                        android:layout_height="match_parent"
                        android:padding="5dp"
                        android:src="@drawable/ic_arrow_back" />

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="15dp"
                        android:gravity="center|left"
                        android:text="@string/chontinhthanhpho"
                        android:textColor="@color/colorWhite"
                        android:textSize="16sp"
                        android:textStyle="bold" />
                </LinearLayout>

                <TextView
                    android:id="@+id/txt_Xong"
                    android:layout_width="80dp"
                    android:layout_height="match_parent"
                    android:layout_alignParentRight="true"
                    android:gravity="center"
                    android:text="@string/xacnhan"
                    android:textColor="@color/colorWhite"
                    android:textSize="16sp" />
            </RelativeLayout>
        </android.support.v7.widget.Toolbar>
    </RelativeLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/rela_toolbar"
        android:background="@color/colorWhite"
        android:orientation="vertical"
        android:paddingTop="50dp">

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#DDDDDD" />

        <RelativeLayout
            android:id="@+id/rela_AutoAddress"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center|left"
                android:paddingLeft="5dp"
                android:text="@string/tudongxacdinhvitri"
                android:textColor="@color/colorBlack" />

            <ImageView
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_alignParentRight="true"
                android:padding="11dp"
                android:src="@drawable/icon_location" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#DDDDDD"
            android:paddingLeft="20dp"
            android:paddingRight="20dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginRight="120dp"
                android:gravity="center|start"
                android:text="@string/vietnam"
                android:textColor="@color/colorBlack"
                android:textStyle="bold" />

            <LinearLayout
                android:id="@+id/linear_DoiQuocGia"
                android:layout_width="120dp"
                android:layout_height="match_parent"
                android:layout_alignParentRight="true"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="40dp"
                    android:layout_height="match_parent"
                    android:padding="13dp"
                    android:src="@drawable/icon_khoangcach" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:text="@string/doiquocgia"
                    android:textSize="13sp" />
            </LinearLayout>

        </RelativeLayout>

        <ListView
            android:id="@+id/list_tinhthanhpho"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:divider="@null">

        </ListView>
    </LinearLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="75dp"
        android:background="@drawable/custom_layout_timkiemtp"
        android:elevation="4dp"
        android:focusableInTouchMode="true">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:src="@drawable/ic_search" />

        <EditText
            android:id="@+id/edtsearch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignParentTop="true"
            android:layout_toEndOf="@+id/imageView"
            android:layout_toRightOf="@+id/imageView"
            android:background="@android:color/transparent"
            android:gravity="center|start"
            android:hint="@string/timnhanh"
            android:paddingRight="10dp"
            android:singleLine="true" />
    </RelativeLayout>
</RelativeLayout>
